# ghstat

./: Cargo.toml  README.md  query.graphql
.github/workflows/: release.yml
src/: main.rs
src/api/: helpers.rs  mod.rs
