[package]
name = "ghstats"
version = "0.1.0"
edition = "2021"
description = "Simple utility for fetching github user info"
license = "GPL-3.0"
repository = "https://github.com/mrtnvgr/ghstats"
keywords = ["github", "graphql", "cli", "stats", "git"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
graphql_client = { version = "0.13.0", features = ["reqwest-blocking"] }
reqwest = { version = "0.11.22", features = ["blocking", "json"] }
serde = "1.0.189"
serde_json = "1.0.107"
upon = "0.7.1"

[profile.release]
strip = true
